* What is new in gsl-2.3:

** bug fix in nonlinear least squares when using data weights with
   finite-difference Jacobian

** add 2D subspace method for large systems (multilarge_nlinear)

** bug fix in gsl_ran_beta for small parameters
   (bug #47646, Yu Liu)

** bug fix in gsl_complex_tan for negative imaginary arguments
   (bug #47347, Yu Liu)

** doc bug fix: value of golden ratio

** fixed scaling issue in 2D subspace nonlinear least squares
   method

** optimize dogleg methods to calculate Gauss-Newton point
   only when needed

* What was new in gsl-2.2.1:

** reverted gsl_linalg_cholesky_decomp to its previous behavior
   so it is backward compatible; new cholesky routine is
   gsl_linalg_cholesky_decomp1

* What was new in gsl-2.2:

** updated gsl_linalg_cholesky_invert to use Level-2 BLAS
   and added function gsl_linalg_pcholesky_invert

** added functions gsl_linalg_tri_*_invert for inverting
   triangular matrices

** fix GSL_EIGEN_SORT_VAL_{ASC,DESC} for nonsymmetric
   eigensystems (Victor Zverovich)

** added complete orthogonal decomposition routines
   (gsl_linalg_COD)

** bug fix where median calculation wasn't reset in
   gsl_rstat_reset(); added gsl_rstat_quantile_reset() function
   (reported by Pedro Donato)

** added multivariate Gaussian random distribution
   gsl_ran_multivariate_gaussian (Timothée Flutre)

** added functions to estimate the 1-norm reciprocal condition
   number for various matrix factorizations:
     * gsl_linalg_cholesky_rcond
     * gsl_linalg_QRPT_rcond

** added functions gsl_linalg_QRPT_{lssolve,lssolve2} to
   compute least squares solutions with the QRPT decomposition

** added function gsl_permute_matrix()

** added modified Cholesky factorization (gsl_linalg_mcholesky)
   to handle symmetric indefinite matrices

** added pivoted Cholesky factorization (gsl_linalg_pcholesky)
   for ill-conditioned matrices

** rewrote (real) Cholesky decomposition to use
   a Level-2 blas algorithm instead of Level-1. Flop