@@ -390,6 +390,13 @@ the observations @var{y}, coefficients @var{c} and matrix of predictor
 variables @var{X}.
 @end deftypefun
 
+@deftypefun size_t gsl_multifit_linear_rank (const double @var{tol}, const gsl_multifit_linear_workspace * @var{work})
+This function returns the rank of the matrix @math{X} which must first have its
+singular value decomposition computed. The rank is computed by counting the number
+of singular values @math{\sigma_j} which satisfy @math{\sigma_j > tol \times \sigma_0},
+where @math{\sigma_0} is the largest singular value.
+@end deftypefun
+
 @node Regularized regression
 @section Regularized regression
 @cindex ridge regression
