@@ -1,5 +1,7 @@
 * What is new in gsl-2.3:
 
+** added function gsl_multifit_linear_rank
+
 ** bug fix in nonlinear least squares when using data weights with
    finite-difference Jacobian
 
